# nostmack-gear-reader

./: .gitignore  Cargo.toml  justfile  read_bytes.py
.cargo/: config.toml
src/: main.rs  rotary_listener.rs  wifi.rs
