[package]
name = "nostmack-gear-reader"
version = "0.1.0"
authors = ["Daniel Pechersky <danny.pechersky@gmail.com>"]
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-net = { version = "0.6.0", features = [
    "udp",
    "proto-ipv4",
    "dhcpv4",
    "medium-ip",
] }
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embedded-io-async = "0.6.1"
esp-alloc = "0.6.0"
esp-backtrace = { version = "0.15.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.12.0", features = ["esp32", "wifi"] }
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
